# rovi2

./: .gitignore  README.md  test.txt
catkin_ws/: .gitignore  camera-settings.yaml  pose_data.csv  run-commands.txt
src/caros/: .gitlab-ci.yml  README.md
src/pose_estimation/: CMakeLists.txt
src/pose_estimation/3D_objects/: object_joshi.ply
src/pose_estimation/3D_scenes/: scene_joshi1.ply  scene_joshi2.ply  scene_joshi3.ply
src/pose_estimation/src/: icp.cpp  ransac_global_alignment.cpp  segment_plane.cpp
src/ur_caros_example/: CMakeLists.txt
tests/pose_estimation/: histogram_pose_data_yoda_cut_off_5_cm.eps  histogram_pose_data_yoda_full.eps  histogram_pose_data_yoda_full_and_random_yoshi.eps  histogram_pose_data_yoshi_cut_off_5_cm.eps  histogram_pose_data_yoshi_full.eps  histogram_pose_data_yoshi_full_and_random_yoda.eps  overall_tp_time_pose_data.eps  pose_data_yoshi_cut_off_5_cm.csv  pose_data_yoshi_full.csv  pose_estimation_evaluation.m  xyz_translation_pose_data_yoda_cut_off_5_cm.eps  xyz_translation_pose_data_yoda_full.eps  xyz_translation_pose_data_yoda_full_and_random_yoshi.eps  xyz_translation_pose_data_yoshi_cut_off_5_cm.eps  xyz_translation_pose_data_yoshi_full.eps  xyz_translation_pose_data_yoshi_full_and_random_yoda.eps  xyz_translation_refinement_pose_data_yoshi_full.eps  z_rotation_pose_data_yoda_cut_off_5_cm.eps  z_rotation_pose_data_yoda_full.eps  z_rotation_pose_data_yoda_full_and_random_yoshi.eps  z_rotation_pose_data_yoshi_cut_off_5_cm.eps  z_rotation_pose_data_yoshi_full.eps  z_rotation_pose_data_yoshi_full_and_random_yoda.eps  (+1 more)
(+94 files in other folders)
